--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "check-unifi"
 version = "0.1.0"
-description = "Monitoring check plugin for Unifi Controller"
+description = "Check plugin for UniFi Network Application"
 authors = ["Daniel Schade <mail@bashlover.de>"]
 readme = "README.md"
 packages = [{include = "check_unifi"}]
@@ -9,8 +9,6 @@ packages = [{include = "check_unifi"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.28.1"
-pylint = "^2.15.8"
-pycodestyle = "^2.10.0"
 
 [build-system]
 requires = ["poetry-core"]
