conf: updated icinga2-commands.conf

--- a/contrib/icinga2-commands.conf
+++ b/contrib/icinga2-commands.conf
@@ -15,6 +15,10 @@ object CheckCommand "unifi" {
        set_if = "$unifi_ssl$"
        description = "Enable ssl for the connection"
     }
+    "--insecure" = {
+       set_if = "$unifi_insecure$"
+       description = "Ignore ssl certificate errors"
+    }
     "--mode" = {
        value = "$unifi_mode$"
        description = "Mode of the check"
